--- a/2011/css/shCore.css
+++ b/2011/css/shCore.css
@@ -53,7 +53,7 @@
 }
 
 .syntaxhighlighter {
-  width: 100% !important;
+  /*width: 80% !important;*/
   margin: 1em 0 1em 0 !important;
   position: relative !important;
   overflow: auto !important;
@@ -69,7 +69,7 @@
   font-style: italic !important;
 }
 .syntaxhighlighter .line {
-  white-space: pre !important;
+  white-space: pre-wrap !important;
 }
 .syntaxhighlighter table {
   width: 100% !important;
@@ -95,7 +95,7 @@
   background: white !important;
   padding-left: 1em !important;
   overflow: hidden !important;
-  white-space: pre !important;
+  white-space: pre-wrap !important;
 }
 .syntaxhighlighter table td.gutter .line {
   text-align: right !important;
