--- a/2012/sass/directions.scss
+++ b/2012/sass/directions.scss
@@ -19,10 +19,10 @@ section#directions{
     iframe{
       display: block;
       height: 500px;
-      width: 100%;
+      width: 96%;
       margin: 20px auto;
-      @include box-shadow(0 0 5px rgba(0,0,0,0.3));
-      @include border-radius(4px);
+      border: solid 6px transparent;
+      @include box-shadow(0 0 10px rgba(0,0,0,0.8));
     }
     
     a.view{font-size: 12px; margin-left: 5%;}
