modified logo to be sharp even at small sizes

--- a/2012/sass/public.scss
+++ b/2012/sass/public.scss
@@ -19,7 +19,7 @@ header{
 
   padding-top: 30px;
   height: 200px;
-  background: transparent url('logo-small.png') no-repeat center 30px;
+  background: transparent url('logo.png') no-repeat center 26px;
   overflow: hidden;
   z-index: 10;
   
