--- a/2012/sass/schedule.scss
+++ b/2012/sass/schedule.scss
@@ -16,7 +16,7 @@ section#schedule{
     li{
       list-style: none;
       margin: 0;
-      padding: 60px 0;
+      padding: 80px 0;
       position: relative;
       height: 20px;
       line-height: 20px;
@@ -37,19 +37,27 @@ section#schedule{
         padding: 0 10px;
         display: block;
         position: absolute;
-        width: 300%;
+        width: 280%;
         left: 100%;
         top: 20px;
         text-align: left;
         color: $white;
       }
       
-      span.track2{ top: 80px;}
+      span.track2{ top: 100px;}
       
       strong, em{display: block; font-weight: normal; font-style: normal;}
       strong{color: $highlight-color;}
       em{color: $black;}
     }
+  }
+}
+
+@media screen and (min-width: 640px){
+  section#schedule ul li{
+    padding: 60px 0;
+    
+    span.track2{top: 80px;}
   }
 }
 
