--- a/2012/sass/public.scss
+++ b/2012/sass/public.scss
@@ -15,11 +15,13 @@ a{color: $highlight-color; text-decoration: none; border-bottom: dotted 1px;}
 header{
   @include full;
   position: relative;
-  padding-top: 50px;
-  height: 200px;
-  background: transparent url('logo.png') no-repeat center 46px;
   overflow: hidden;
   z-index: 10;
+  padding-top: 40px;
+
+  h1, h2{text-align: center;}
+  h1{ font-size: 18px; line-height: 20px;}
+  h2{ font-size: 14px; line-height: 18px;}
   
   a.home{
     display: block;
@@ -27,8 +29,6 @@ header{
     width: 100%;
     height: 100%;
   }
-  
-  h1, h2{text-indent: -1000em;}
   
   p#twitter{
     display: block;
@@ -62,15 +62,14 @@ nav{
     a{
       display: block;
       @include columns(4);
+      @include transition-property(length);
       @include transition-duration(2s);
       
       text-align: center;
       text-decoration: none;
       color: $primary-color;
       border: none;
-      
-      padding: 50px 0 8px 0;
-      background: transparent url("icons-small.png") no-repeat top center;
+      line-height: 36px;
 
       &.register{background-position: center 0px;}
       &.talks{background-position: center -100px;}
@@ -110,8 +109,15 @@ footer{
   html{background-position: fixed;}
   
   header{
+    position: relative;
+    padding-top: 50px;
+    height: 200px;
+    background: transparent url('logo.png') no-repeat center 0px;
+    overflow: hidden;
+    z-index: 10;
     padding-top: 4px;
-    background-position: center 0px;
+
+    h1, h2{text-indent: -1000em;}
     
     p#twitter{
       top: 5px;
@@ -125,6 +131,38 @@ footer{
     }
   }
   
+  nav{  
+    ul{
+      margin: 0; padding: 0;
+      li{display: inline;}
+        
+      a{
+        display: block;
+        @include columns(4);
+      
+        text-align: center;
+        text-decoration: none;
+        color: $primary-color;
+        border: none;
+      
+        padding: 50px 0 8px 0;
+        background: transparent url("icons-small.png") no-repeat top center;
+
+        body#page_index &.index,
+        body#page_talks &.talks,
+        body#page_schedule &.schedule,
+        body#page_directions &.directions,
+        body#page_badges &.badges,
+        body#page_sponsors &.sponsors,
+        &:hover{
+          background-color: $highlight-color;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 800px) {
   nav ul a{ @include columns(2);}
 }
 
